[tool.poetry]
name = "pyhackrf"
version = "0.1.2"
description = "Python wrapper for the libhackrf library"
authors = ["4thel00z <4thel00z@gmail.com>"]
license = "GPL-3"
build= "build.py"
readme = "README.md"
packages = [
    { include = "hackrf" }
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.3"

[tool.poetry.dev-dependencies]
black = "^21.5b2"
pytest = "^6.2.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
